1. InstallRemote.ps1 - changed OneDrive to newer version checking code (only checks Major.Minor version not Major.Minor.Subversion.Revision).
2. InstallRemote.ps1 - changed Visual Studio Code to newer version checking code (only checks Major.Minor.Subversion).
3. InstallRemote.ps1 - removed Silverlight.
4. InstallRemote.ps1 - fixed notifications showing on servers instead of clients.

######################
#                    #
#      2021.8.3      #
#                    #
######################
1. Added config items HPUniversalPrintDriver and LexmarkUniversalPrintDriver. Bumped config version.
2. Added functions Copy-HPUniversalPrintDriver and Install-HPUniversalPrintDriver.
3. Added functions Copy-LexmarkUniversalPrintDriver and Install-LexmarkUniversalPrintDriver.

######################
#                    #
#      2021.8.2      #
#                    #
######################
New features and other changes:
1. Added function Get-SplunkStatus.
2. Changed some text in remediation sub-module.
3. Made some small changes to add additional information to applications in Get-CommandList.

######################
#                    #
#       2021.8       #
#                    #
######################
New features and other changes:
1. Added OneDrive config item and bumped config version.
2. Added function Copy-OneDrive.
3. Added Resources folder in module folder.
4. Added list of Modules and some information about them in CommandListModules.csv. Added the .csv to the Resources folder. This is used in Get-CommandList and Get-ModuleList.
5. Added function Get-CommandList.
6. Added function Get-ModuleList.
7. Moved InstallRemote.ps1 to Resources folder. Updated Install-Patches with the new path.

######################
#                    #
#       2021.7       #
#                    #
######################
New features and other changes: